[package]
name = "solt"
version = "0.1.0"
edition = "2021"
authors = ["Morshedul Islam <morshedulmunna1@gmail.com>"]
description = "A comprehensive Redis CLI management tool"
license = "MIT"
repository = "https://github.com/Execute-Soft/solt"
readme = "README.md"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal colors and styling
colored = "2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.10"
log = "0.4"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Redis client
redis = { version = "0.24", features = [
    "tokio-comp",
    "connection-manager",
    "streams",
    "tokio-rustls-comp",
] }

# Async streams
futures = "0.3"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Interactive CLI features
rustyline = "13.0"

# CSV export
csv = "1.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Table formatting
tabled = "0.15"

# Progress bars
indicatif = "0.17"

# File operations
walkdir = "2.4"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# System directories
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "solt"
path = "src/main.rs"
